--- a/HTML/css_priority.html
+++ b/HTML/css_priority.html
@@ -41,7 +41,7 @@
         <h1>Hello, Multicampus</h1>
         <h1 class="hello">My name is GiSeok</h1>
         <h1 id="hong">Hong</h1>
-        <h1 class="hello" style="green">hi hi hi hi hi</h1>
+        <h1 class="hello" style="color:green">hi hi hi hi hi</h1>
 
     </div>
 </body>
