--- a/HTML/Html,Css/ch2/naver.html
+++ b/HTML/Html,Css/ch2/naver.html
@@ -2,27 +2,27 @@
 <head>
   <!-- 설명, 제목, 아이콘(파비콘) 부가적인 정보들 -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1" />
-  <!--./ 현재 폴더를 의미한다. -->
+  <link rel="stylesheet" href="./naver.css"> <!--css 불러오기-->
+
   <title>네이버 연습</title>
 
 </head>
 <body>
   <header>
-    <!--중요한 것들을 heading tag에 넣는다-->
-    <h1>
-      <a href="https://www.naver.com">네이버</a>  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
-
-    </h1>
-    <h2>검색창</h2>
-    <fieldset>
-      <legend>검색</legend>
-      <input />
-      <button>검색</button>
-    </fieldset>
+    <div id="header-center"> <!-- 가운데 정렬용 div -->
+      <h1>
+        <a href="https://www.naver.com">네이버</a>  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
+      </h1>
+      <h2>검색창</h2>
+      <fieldset>
+        <legend>검색</legend>
+        <input />
+        <button>검색</button>
+      </fieldset>
+    </div>  
   </header>
+
   <nav>  
     <ul> <!-- unordered list --> <!--ol 태그도 있다. orderd list -->
       <li>메일</li> <!-- list item--> 
@@ -34,6 +34,7 @@
       <li>네이버쇼핑</li>
     </ul>
   </nav>
+
   <main>
     <h2>실시간 검색어</h2>
     <h3>연합뉴스</h3>
@@ -52,6 +53,7 @@
     <h3>법률</h3>
     <h3>쇼핑</h3>
   </main>
+
   <footer>
     <div>공지사항</div>
     <div>Creators</div>
