--- a/HTML/Html,Css/ch2/naver.html
+++ b/HTML/Html,Css/ch2/naver.html
@@ -11,15 +11,22 @@
 <body>
   <header>
     <div id="header-center"> <!-- 가운데 정렬용 div -->
-      <h1>
-        <a href="https://www.naver.com">네이버</a>  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
-      </h1>
-      <h2>검색창</h2>
-      <fieldset>
-        <legend>검색</legend>
-        <input />
-        <button>검색</button>
-      </fieldset>
+      <div>
+        <span>네이버를 시작페이지로</span>
+        <span>쥬니어네이버</span>
+        <span>해피빈</span>
+      </div>
+      <div id="header-search">
+        <h1>
+          <a href="https://www.naver.com">네이버</a>  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
+        </h1>
+        <h2>검색창</h2>
+        <fieldset>
+          <legend>검색</legend>
+          <input />
+          <button>검색</button>
+        </fieldset>
+      </div>
     </div>  
   </header>
 
