--- a/HTML/Html,Css/ch2/naver.html
+++ b/HTML/Html,Css/ch2/naver.html
@@ -20,7 +20,7 @@
         <h1>
           <a href="https://www.naver.com">네이버</a>  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
         </h1>
-        <h2>검색창</h2>
+        <h2 class="blind">검색창</h2>
         <fieldset>
           <legend>검색</legend>
           <input />
