--- a/HTML/Html,Css/ch3/naver.html
+++ b/HTML/Html,Css/ch3/naver.html
@@ -17,14 +17,16 @@
         <span>해피빈</span>
       </div>
       <div id="header-search">
-        <h1>
-          <a href="https://www.naver.com">네이버</a>  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
-        </h1>
+        <a href="https://www.naver.com">  <!--태그 안에 있는 부가적인 것들 속성 attribute -->
+          <h1>
+            <span>네이버</span>
+          </h1>
+        </a>
         <h2 class="blind">검색창</h2>
         <fieldset>
-          <legend>검색</legend>
+          <legend class="blind">검색</legend>
           <input />
-          <button>검색</button>
+          <button class="blind">검색</button>
         </fieldset>
       </div>
     </div>  
