--- a/JavaScript/NomadCoder_momonton/2/index.html
+++ b/JavaScript/NomadCoder_momonton/2/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>This works!</h1>
-
+    <h1 id="title">This works!</h1>
+    <h2 class="content">Hello everyone</h2>
+    <h2 class="content">Do the thing you think you can not do.</h2>
     <script src="index.js"></script>
   </body>
 </html>
