--- a/JavaScript/NomadCoder_momonton/3/index.html
+++ b/JavaScript/NomadCoder_momonton/3/index.html
@@ -9,6 +9,11 @@
       <h1 class="js-title">00:00</h1>
       <h2 class="content">간단히 연습을 해보자</h2>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="what is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
   </body>
 </html>
