--- a/JavaScript/NomadCoder_momonton/3/index.html
+++ b/JavaScript/NomadCoder_momonton/3/index.html
@@ -12,7 +12,7 @@
     <form class="js-form form">
       <input type="text" placeholder="what is your name?" />
     </form>
-    <h4 class="js-greetings greetings"></h4>
+    <h4 class="js-greetings"></h4>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
   </body>
