--- a/JavaScript/NomadCoder_momonton/3/index.html
+++ b/JavaScript/NomadCoder_momonton/3/index.html
@@ -3,17 +3,27 @@
   <head>
     <title>Momentum</title>
     <link rel="stylesheet" href="index.css" />
+    <meta charset="utf-8" />
   </head>
   <body>
     <div class="js-clock">
       <h1 class="js-title">00:00</h1>
-      <h2 class="content">간단히 연습을 해보자</h2>
     </div>
+    
     <form class="js-form form">
       <input type="text" placeholder="what is your name?" />
     </form>
     <h4 class="js-greetings"></h4>
+
+    <form class = "js-toDoForm">
+      <input type="text" placeholder="Write a to do">
+    </form>
+    <ul class="js-toDoList">
+
+    </ul>
+
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
